# pg_acoustid

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  acoustid--1.0--1.1.sql  acoustid--1.0.sql  acoustid--1.1.sql  acoustid--2.0.sql  acoustid--unpackaged--1.0.sql  acoustid.c  acoustid.control  acoustid.h  acoustid_compare.c  acoustid_encoding.c  acoustid_fingerprint_encoding.c  acoustid_fingerprint_encoding.h  acoustid_fingerprint_type.c  acoustid_fingerprint_type.h  acoustid_query.c  align_fingerprints.cpp  align_fingerprints.h  base64.c  base64.h  base64_test.cc  common.h  config.h  encode_fingerprint.c  encode_fingerprint.h  encoding.c  fingerprint.c  fingerprint.h  fingerprint_compression.c  fingerprint_compression_test.cc  fingerprint_matcher_test.cc  main.c  pack_int3_array.c  pack_int3_array.h  pack_int5_array.c  (+21 more)
expected/: acoustid.out  acoustid_fingerprint.out  acoustid_fingerprint_decode.out  acoustid_fingerprint_decode_binary.out  acoustid_fingerprint_encode.out  acoustid_fingerprint_encode_binary.out  acoustid_fingerprint_in_out.out  acoustid_fingerprint_type.out  acoustid_raw_fingerprint_in_out.out  align_fingerprints.out  match_fingerprints.out
numlib/: convolve_test.cpp  window.hpp
scripts/: check.sh  patch.sh
sql/: acoustid.sql  acoustid_fingerprint.sql  acoustid_fingerprint_decode.sql  acoustid_fingerprint_decode_binary.sql  acoustid_fingerprint_encode.sql  acoustid_fingerprint_encode_binary.sql  acoustid_fingerprint_in_out.sql  acoustid_fingerprint_type.sql  (+3 more)
utils/: .gitignore  CMakeLists.txt  README.md  align_fingerprints.cpp  align_fingerprints.h  align_fingerprints_test.cpp  base64.hh  common.h  fingerprint_compression.c  fingerprint_compression.h  fingerprint_matcher.c  fingerprint_matcher.h  packed_uint3_array.h  packed_uint3_array_test.cc  packed_uint5_array_test.cc
utils/numlib/: array.hpp  base.hpp  base_test.cpp  convolve.hpp  gradient.hpp  gradient_test.cpp  minmax.hpp  minmax_test.cpp  window_test.cpp
utils/testdata/: inner_city_life.json  inner_city_life_snippet.json  roar.json  roar_vine.json  the_world_is_all_one_02.json  the_world_is_all_one_03.json  titan.json
(+5 files in other folders)
